--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <button class="click" onclick="aparecerInput()" ><p>❤️ click aqui</p></button>
       <label class="ocuto" for="meuInput">Digite a senha</label>
       <input id="meuInput" type="text" class="ocuto InputSenha"></input>
-      <button  onclick="codigo()"  class="ocuto" ><p>enviar</p></button>
+      <button   onclick="codigo()"  class="ocuto btenviar" ><p>enviar</p></button>
 
 
     </div>
@@ -25,7 +25,17 @@
       </iframe>
       <div id="carosselIMG" class="carrosel">
         <img class="tela" src="" alt="">
+        <img class="tela" src="" alt="">
+        <img class="tela" src="" alt="">
+        <img class="tela" src="" alt="">
+        <div class="imgL">
+          <span class="bolinha"></span>
+          <span class="bolinha"></span>
+          <span class="bolinha"></span>
+          <span class="bolinha"></span>
+        </div>
       </div>
+      
       <h1 class="loveTexto">sdasd</h1>
       <h1 class="love">Eu te amo há:</h1>
       <p id="dataT">0 anos, 0 meses, 0 dias, 0 horas e 0 segundos</p>
